# CmakeGoogleTestCpp

./: .gitignore  CMakeLists.txt  README.md
lib/mylib/: CMakeLists.txt  MyRandom.cpp  MyRandom.h
src/: main.cpp
test/: CMakeLists.txt
test/tests/: CMakeLists.txt  test1.cpp  test2.cpp
